update api to use teams in request and response
